--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,6 +27,10 @@
         width: 200px;
         margin: 0 auto;
       }
+      .card-question {
+        font-weight: 600;
+        margin-top: 5%;
+      }
       .text-input,
       .card-text,
       .prediction-card {
@@ -96,6 +100,7 @@
       <div class="card-body">
         <h5 class="card-title">Candidate Interview Response</h5>
         <p class="card-text">Enter the candidate's text response below. Text will be analyzed as Positive or Negative using a built-in AI model</p>
+        <p class="card-text card-question">Question: Tell me about your experience at your previous company</p>
         <textarea class="form-control text-input" id="textInputTextarea" rows="3"></textarea>
         <a id="analyze-button" onclick="handleAnalyzeClick()" class="btn btn-primary">Analyze</a>
         <div id="response-container">
